# qt-screen-info

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
